# movie-api-dajngo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
account/: models.py  urls.py
account/apis/: __init__.py  login.py
account/managers/: user_manager.py
account/migrations/: 0001_initial.py
account/serializers/: login_serializer.py
account/test/: test_login.py
compose/: Dockerfile  django_start
movies/: urls.py
movies/apis/: __init__.py  movies.py  review.py
movies/filters/: movie_order_filter.py
movies/management/commands/: import_test_data.py
movies/migrations/: 0001_initial.py
movies/models/: movie.py  review.py
movies/paginators/: movie_paginator.py
movies/serializers/: movie_serializer.py  review_serializer.py
movies/test/: base.py
movies/test/movies_api/: test_movies_api.py  test_order_in_movie_api.py  test_pagination_in_movie_api.py  test_search_in_movie_api.py
movies/test/review_api/: test_post_review_api.py
movies_app/: asgi.py  settings.py  urls.py  wsgi.py
